[package]
name = "alert-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.3"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }